@@ -19,6 +19,7 @@ Changes in version 3.1 RC2 (2011-11-15)
 * Support target request with multiple parameter values in FlahMap matching logic
 * Fix issue in SimpleMappingExceptionResolver causing exception when setting "statusCodes" property
 * The Form input tag allows type values other than "text" such as HTML5-specific types.
+* The Form hidden tag supports "disabled" attribute
 
 Changes in version 3.1 RC1 (2011-10-11)
 ---------------------------------------
